Fix overlapping logo and list items

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -74,12 +74,16 @@
 		height: 80px;
 	}
 
+	.university-logo {
+		bottom: 0;
+	}
+
 	ul.actions {
 		display: inline-block;
 	}
 
 		ul.actions li {
-			padding: 0.5em;
+			padding: 0.3em;
 		}
 }
 
